--- a/sources/Panel/CMakeLists.txt
+++ b/sources/Panel/CMakeLists.txt
@@ -60,7 +60,6 @@ file(GLOB DISPLAY_FONT    src/Display/Font/*)
 file(GLOB HARDWARE        src/Hardware/*.h src/Hardware/*.cpp)
 file(GLOB HARDWARE_CMSIS  src/Hardware/CMSIS/*)
 file(GLOB HARDWARE_HAL    src/Hardware/HAL/*)
-file(GLOB HARDWARE_STM32  src/Hardware/stm32/*)
 file(GLOB SETTINGS        src/Settings/*)
 file(GLOB UTILS           src/Utils/*)
 file(GLOB VS              ../common/_VS/*.h)
@@ -77,7 +76,6 @@ source_group(Display\\Font     FILES ${DISPLAY_FONT})
 source_group(Hardware          FILES ${HARDWARE})
 source_group(Hardware\\CMSIS   FILES ${HARDWARE_CMSIS})
 source_group(Hardware\\HAL     FILES ${HARDWARE_HAL})
-source_group(Hardware\\stm32   FILES ${HARDWARE_STM32})
 source_group(Settings          FILES ${SETTINGS})
 source_group(Utils             FILES ${UTILS})
 source_group(_VS               FILES ${VS})
@@ -85,4 +83,5 @@ source_group(_VS\\std_includes FILES ${VS_STD_INCLUDES})
 source_group(_VS\\CMSIS        FILES ${VS_CMSIS})
 
 add_library(Panel ${LIBS_HAL} ${COMMON} ${SRC} ${DISPLAY} ${DISPLAY_FONT} ${HARDWARE} ${HARDWARE_CMSIS} ${HARDWARE_HAL}
-                  ${HARDWARE_STM32}  ${SETTINGS} ${UTILS} ${VS} ${VS_STD_INCLUDES} ${VS_CMSIS})
+                  ${SETTINGS} ${UTILS} ${VS} ${VS_STD_INCLUDES} ${VS_CMSIS}
+)
