--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1272,27 +1272,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>common</GroupName>
+          <GroupName>Communicator</GroupName>
           <Files>
             <File>
-              <FileName>Command.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Command.h</FilePath>
-            </File>
-            <File>
-              <FileName>common_defines.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\common_defines.h</FilePath>
+              <FileName>Decoder_d.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\common\Communicator\Decoder_d.cpp</FilePath>
             </File>
             <File>
               <FileName>Decoder_d.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\common\Decoder_d.h</FilePath>
+              <FilePath>..\common\Communicator\Decoder_d.h</FilePath>
             </File>
             <File>
-              <FileName>Decoder_d.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\common\Decoder_d.cpp</FilePath>
+              <FileName>Message_.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Communicator\Message_.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -3749,27 +3744,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>common</GroupName>
+          <GroupName>Communicator</GroupName>
           <Files>
             <File>
-              <FileName>Command.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Command.h</FilePath>
-            </File>
-            <File>
-              <FileName>common_defines.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\common_defines.h</FilePath>
+              <FileName>Decoder_d.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\common\Communicator\Decoder_d.cpp</FilePath>
             </File>
             <File>
               <FileName>Decoder_d.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\common\Decoder_d.h</FilePath>
+              <FilePath>..\common\Communicator\Decoder_d.h</FilePath>
             </File>
             <File>
-              <FileName>Decoder_d.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\common\Decoder_d.cpp</FilePath>
+              <FileName>Message_.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Communicator\Message_.h</FilePath>
             </File>
           </Files>
         </Group>
