--- a/sources/Panel/Panel.uvprojx
+++ b/sources/Panel/Panel.uvprojx
@@ -1268,22 +1268,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>common</GroupName>
+          <GroupName>Communicator</GroupName>
           <Files>
             <File>
-              <FileName>Command.h</FileName>
+              <FileName>Message_.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\common\Command.h</FilePath>
-            </File>
-            <File>
-              <FileName>Decoder_p.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Decoder_p.h</FilePath>
+              <FilePath>..\common\Communicator\Message_.h</FilePath>
             </File>
             <File>
               <FileName>Decoder_p.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\common\Decoder_p.cpp</FilePath>
+              <FilePath>..\common\Communicator\Decoder_p.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Decoder_p.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Communicator\Decoder_p.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2671,22 +2671,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>common</GroupName>
+          <GroupName>Communicator</GroupName>
           <Files>
             <File>
-              <FileName>Command.h</FileName>
+              <FileName>Message_.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\common\Command.h</FilePath>
-            </File>
-            <File>
-              <FileName>Decoder_p.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Decoder_p.h</FilePath>
+              <FilePath>..\common\Communicator\Message_.h</FilePath>
             </File>
             <File>
               <FileName>Decoder_p.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\common\Decoder_p.cpp</FilePath>
+              <FilePath>..\common\Communicator\Decoder_p.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Decoder_p.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Communicator\Decoder_p.h</FilePath>
             </File>
           </Files>
         </Group>
